welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: reassignment to val
	if (nums=null){
                ^