welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
	var n = nums.length
	var p=0
	if (nums=null){
    return -1
  }
  while (nums(p)!=lookingFor && p<n){
    p=p+1
  }
  return p
}